--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+# Ignore all images generated in testing the library
+*.png
